<resources>
    <string name="app_name">E-sell</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_anything">Search anything...</string>
    <string name="city_name">CityName</string>
    <string name="your_location">Your Location</string>
    <string name="price">₹ 11.000.00</string>
    <string name="help">Help &amp; Support</string>
    <string name="setting">Setting</string>
    <string name="contact_information">Contact information</string>
    <string name="country_code">+91</string>
    <string name="country">Country</string>
    <string name="digit">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification">You have verified your email. It\'s important to allow us to securely communicate with you.</string>
    <string name="no_messages_yet">No messages, yet?</string>
    <string name="FirebaseClientid">976776669815-e0qjheg7vaj1364co5bc4sr745qir2pb.apps.googleusercontent.com</string>
    <string name="keep_messages">We will keep messages for any items you are trying to buy in here</string>
    <string name="sell_keep_messages">We will keep messages for any items you are trying to Sell in here</string>
    <string name="prathvik_sankaliya">Prathvik Sankaliya</string>
    <string name="i_am_android_developer_at_ics">I am Android Developer At ICS</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="active_orders_expire_orders">Active Orders, Expire Orders</string>
    <string name="rate_us_invite_firends_version">Rate us, Invite Firends, Version</string>
    <string name="settings">Settings</string>
    <string name="logout_theme_mode">Logout , Theme Mode</string>
    <string name="select_language">Select Language</string>
    <string name="default_english">Default English</string>
    <string name="rate_us">Rate us</string>
    <string name="if_you_love_our_app_please_take_a_moment_to_rate_it">If You Love our App , Please Take a moment to rate it.</string>
    <string name="invite_friends_to_e_sell">Invite Friends To E-Sell</string>
    <string name="invite_your_friends_to_buy_and_sell">Invite Your Friends To Buy and Sell</string>
    <string name="selling_on_e_sell">Selling On E-Sell</string>
    <string name="follow_our_e_sell_policy">Follow our E - Sell Policy</string>
    <string name="services_and_content_policy">Services and Content Policy</string>
    <string name="follow_our_services_e_sell_policy">Follow our Services E - Sell Policy</string>
    <string name="version">Version</string>
    <string name="v_1_0">V 1.0</string>
    <string name="my_orders1">My Orders</string>
    <string name="logout">Logout</string>
    <string name="myads_item">MyAds Item</string>
    <string name="all_users_chat">All Users Chat</string>
    <string name="type_a_message">Type a message...</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_code_to_verify_your_phone_number">Enter the OTP Code To Verify Your Phone Number</string>
    <string name="we_sent_a_6_digit_code">We Sent a 6-Digit Code</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="preview_ads">Preview Ads</string>
    <string name="congratulation">Congratulation !!</string>
    <string name="your_ad_will_successfully_posted">Your Ad Will Successfully Posted...</string>
    <string name="tap_to_enable_location">Tap To Enable Location</string>
    <string name="all_category1">All Category</string>
    <string name="fresh_recomendation">Fresh Recomendation</string>
    <string name="continue_with_phone">Continue With Phone</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="we_will_send_confirmation_code_to_your_phone">We will send confirmation code to your phone.</string>
    <string name="country1">Country</string>
    <string name="phone_number1">Phone Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="all_categories">All Categories</string>
    <string name="item_details">Item Details</string>
    <string name="title">Title *</string>
    <string name="your_item_title_like_e_g_brand_model_type">* Your Item Title like (e.g. brand, model, Type)</string>
    <string name="describe_what_you_are_selling">Describe What you are Selling *</string>
    <string name="include_condition_features_and_reason_for_selling">* Include Condition, features and reason for selling</string>
    <string name="price2">Price</string>
    <string name="price_has_been_only_indian_currency">* Price has been only Indian Currency</string>
    <string name="confirm_your_location">Confirm Your Location</string>
    <string name="confirm_your_present_location">* Confirm Your Present Location</string>
    <string name="verify_location">Verify Location</string>
    <string name="choose_images">Choose Images</string>
    <string name="select_minimum_1_item_images">* Select Minimum 1 Item Images</string>
    <string name="select_images">Select Images</string>
    <string name="post">Post</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="edit">Edit</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="must_be_enter_your_good_name">* Must be Enter Your Good Name</string>
    <string name="about_us">About Us</string>
    <string name="your_profession_title_like_e_g_job_business_store">* Your Profession Title like (e.g. Job, Business, Store)</string>
    <string name="enter_your_phone_number1">Enter Your Phone Number</string>
    <string name="phone_number_must_be_in_indian_code_like_91">* Phone Number Must be in Indian Code like +91</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="your_email_must_be_include_and_com">* Your Email Must be include @ and .com</string>
    <string name="confirm_your_location1">Confirm Your Location</string>
    <string name="verify_location1">Verify Location</string>
    <string name="confirm_your_present_location1">* Confirm Your Present Location</string>
    <string name="next">Next</string>
    <string name="loading">Loading...</string>
    <string name="all_category">All Category</string>
    <string name="not_found_n_any_your_ads">Not Found \n Any Your Ads</string>
</resources>