<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.phoneLogin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_20mdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivphoneDetailsBackArrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_20mdp"
                android:scaleType="fitCenter"
                android:src="?attr/actionModeCloseDrawable" />

            <TextView
                android:id="@+id/tvEnterPhoneLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10mdp"
                android:layout_marginEnd="@dimen/_10mdp"
                android:drawablePadding="@dimen/_15mdp"
                android:padding="@dimen/_10mdp"
                android:text="@string/continue_with_phone"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivAvatarLogin"
        android:layout_width="@dimen/_83mdp"
        android:layout_height="@dimen/_90mdp"
        android:layout_marginStart="@dimen/_20mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_man" />

    <TextView
        android:id="@+id/tvEnterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20mdp"
        android:layout_marginTop="@dimen/_15mdp"
        android:layout_marginEnd="@dimen/_5mdp"
        android:text="@string/enter_your_phone_number"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:layout_marginEnd="@dimen/_5mdp"
        android:alpha="0.5"
        android:text="@string/we_will_send_confirmation_code_to_your_phone"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20mdp"
            android:layout_marginTop="@dimen/_25mdp"
            android:alpha="0.5"
            android:text="@string/country"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30mdp"
            android:layout_marginTop="@dimen/_25mdp"
            android:alpha="0.5"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etEnterCountryCode"
            android:layout_width="@dimen/_60mdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20mdp"
            android:focusable="false"
            android:hint="+91" />

        <EditText
            android:id="@+id/etEnterPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10mdp"
            android:layout_marginEnd="@dimen/_10mdp"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHighlight="@color/lightblue"
            android:textColorLink="@color/lightblue" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnPhoneNumLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15mdp"
            android:layout_marginEnd="@dimen/_15mdp"
            android:backgroundTint="@color/lightblue"
            android:paddingTop="@dimen/_8mdp"
            android:paddingBottom="@dimen/_8mdp"
            android:text="@string/get_otp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>