<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.confirmationCode">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_20mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivConfirmationBackArrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/_20mdp"
                android:scaleType="fitCenter"
                android:src="?attr/actionModeCloseDrawable" />

            <TextView
                android:id="@+id/tvConfirmationLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10mdp"
                android:drawablePadding="@dimen/_15mdp"
                android:padding="@dimen/_10mdp"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvConfirmationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25mdp"
        android:layout_marginTop="@dimen/_25mdp"
        android:layout_marginEnd="@dimen/_25mdp"
        android:text="@string/enter_the_otp_code_to_verify_your_phone_number"
        android:textColor="@color/lightblack"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_25mdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tvConfirmationTitle"
        app:layout_constraintStart_toStartOf="@+id/tvConfirmationTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmationTitle">

        <TextView
            android:id="@+id/tvMessageBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_sent_a_6_digit_code"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvDisplayPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/marine_blue"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivEditPhoneNum"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit" />
    </LinearLayout>

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8mdp"
        android:textColor="@color/black"
        app:bar_active_color="@color/lightblue"
        app:bar_enabled="true"
        app:bar_height="1dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:length="6"
        app:otp_text_size="24dp"
        app:width="40dp" />

    <Button
        android:id="@+id/btnContinuePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/lightblue"
        android:paddingTop="@dimen/_10mdp"
        android:paddingBottom="@dimen/_10mdp"
        android:text="@string/verify_otp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpView" />


</androidx.constraintlayout.widget.ConstraintLayout>